making home page

--- a/resources/views/pages/guest/home.edge
+++ b/resources/views/pages/guest/home.edge
@@ -1,24 +1,33 @@
 @layouts.app({ title: "Beranda", titleNav: "beranda" })
-<section class="w-screen h-screen bg-center bg-no-repeat bg-[url('https://flowbite.s3.amazonaws.com/docs/jumbotron/conference.jpg')] bg-gray-700 bg-blend-multiply">
-  <div class="px-4 mx-auto max-w-screen-xl text-center py-24 lg:py-56">
-      <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-white md:text-5xl lg:text-6xl">We invest in the world’s potential</h1>
-      <p class="mb-8 text-lg font-normal text-gray-300 lg:text-xl sm:px-16 lg:px-48">Here at Flowbite we focus on markets where technology, innovation, and capital can unlock long-term value and drive economic growth.</p>
-      <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0">
-          <a href="#" class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900">
-              Get started
-              <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-                  <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-              </svg>
-          </a>
-          <a href="#" class="inline-flex justify-center hover:text-gray-900 items-center py-3 px-5 sm:ms-4 text-base font-medium text-center text-white rounded-lg border border-white hover:bg-gray-100 focus:ring-4 focus:ring-gray-400">
-              Learn more
-          </a>  
-      </div>
-  </div>
+<section class="w-screen h-screen flex justify-center items-center bg-gradient-to-r from-blue-300 to-blue-600 z-0 relative">
+    <img data-aos="fade-right" src="/resources/images/superkids.png" class=" w-[15cm] pt-[4cm] h-auto" alt="">
+    <div data-aos="fade-left" class="mt-16 w-[20cm]">
+        <p class="text-6xl font-bold text-white">Puskesmas</p>
+        <p class="text-6xl font-bold text-white pb-5">Curugbitung</p>
+       <div class="w-[15cm]">
+        <p class="text-lg font-semibold text-white pb-5">Selamat datang di website Puskesmas Curugbitung. Di website ini
+            selain info dan layanan mengenai puskesmas, kami menyediakan modul tumbuh kembang anak. Dimana modul
+            tersebut terdapat dua bagian yaitu modul pengasuhan anak dan modul tumbuh kembang.</p>
+        <p class="text-lg font-semibold text-white pb-5">Ayo bunda dan ayah pelajari cara pengasuhan anak dan tumbuh kembang anak sesuai dengan usia anak bunda dan ayah ya.</p>
+       </div>
+
+    </div>
 </section>
 
 <section class="w-screen h-screen">
-  <p class="absolute"> This is home page </p>
+    
+@!component('components/carousel/carousel')
+</section>
+
+<section class="w-screen lg:h-screen h-auto  lg:px-[1.5cm] px-8 lg:py-0 py-16 flex items-center ">
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:gap-4 gap-12 mx-auto">
+        @!component('components/card/card')
+        @!component('components/card/card')
+        @!component('components/card/card')
+        @!component('components/card/card')
+
+    </div>
+
 </section>
 
 @end
