--- a/resources/views/partials/footer.edge
+++ b/resources/views/partials/footer.edge
@@ -1,33 +1,47 @@
+<div></div>
+<footer class=" bg-cyan-100 dark:bg-gray-900">
+    <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
+        <div class="md:flex md:justify-center">
+            <div class="mb-6 md:mb-0  md:me-12">
+                <div class=" text-left">
+                    <h2 class="mb-1 leading-none text-xl font-semibold dark:text-white">Puskesmas Curugbitung</h2>
+                    <p class="pb-5">Kami Siap Melayani Dengan <br> Hati, Ramah, dan Profesional</p>
+                    <img src="/resources/images/logo_curug_bitung.png" class=" h-28 me-3" alt="Logo Puskes" />
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
+                <div>
+                    <h2 class="mb-1 text-xl font-semibold text-gray-900 uppercase dark:text-white">FAQ</h2>
+                    <ul class="text-gray-500 dark:text-gray-400 font-medium">
+                        <li class="mb-4">
+                            <a href="#" class="hover:underline">Frequently Asked Questions</a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h2 class="mb-1 text-xl font-semibold text-gray-900 uppercase dark:text-white">Hubungi Kami</h2>
+                    <p>Jalan Raya Maja-Kaleang <br> Curugbitung, Lebak 42382,<br> Kabupaten Lebak, Banten</p>
+                </div>
+                <div>
+                    <h2 class="mb-1 text-xl font-semibold text-gray-900 uppercase dark:text-white">Tentang Kami</h2>
+                   <p class="mb-3">Saat ini UPTD Puskesmas Rawat Inap <br> Curugbitung dikepalai oleh H. Ribun. <br> Beliau menjabat sejak tahun 2014 <br> sampai dengan saat ini.</p>
+            <p class="mb-3">Dibawah kepemimpinan beliau, kami <br> yakin mampu memberikan pelayanan <br> kesahatan yang optimal kepada <br> masyarakat Curugbitung</p>
+                </div>
+            </div>
+        </div>
+        <hr class="my-6 border-slate-600 sm:mx-auto dark:border-gray-700 lg:my-8" />
+        <div class="sm:flex sm:items-center sm:justify-between">
+            <span class="text-sm text-black sm:text-center dark:text-gray-400">© 2024 Made by <a
+                    href="https://itsalghifari.com/" class="hover:underline">itsalghifari.com</a>.
+            </span>
 
-
-<footer class="bg-white rounded-lg shadow dark:bg-gray-900 m-4">
-    <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
-        {{-- <div class="sm:flex sm:items-center sm:justify-between">
-            <a href="https://flowbite.com/" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
-                <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo" />
-                <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
-            </a>
-            <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-gray-400">
-                <li>
-                    <a href="#" class="hover:underline me-4 md:me-6">About <i class="fa-solid fa-house"></i></a>
-                </li>
-                <li>
-                    <a href="#" class="hover:underline me-4 md:me-6">Privacy Policy</a>
-                </li>
-                <li>
-                    <a href="#" class="hover:underline me-4 md:me-6">Licensing</a>
-                </li>
-                <li>
-                    <a href="#" class="hover:underline">Contact</a>
-                </li>
-            </ul>
-        </div> --}}
-        <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
-        <span class="block text-sm text-gray-500 sm:text-center dark:text-gray-400">2024 - Made By <a href="https://itsalghifari.com/" class="hover:underline">itsalghifari.com</a>.</span>
+        </div>
     </div>
-
-    @!component('components/navbar/navbar_foot')
 </footer>
+@!component('components/navbar/navbar_foot')
+
 
 {{-- Script --}}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/js/all.min.js" integrity="sha512-u3fPA7V8qQmhBPNT5quvaXVa1mnnLSXUep5PS1qo5NRzHwG19aHmNJnj1Q8hpA/nBWZtZD4r4AX6YOt5ynLN2g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/js/all.min.js"
+    integrity="sha512-u3fPA7V8qQmhBPNT5quvaXVa1mnnLSXUep5PS1qo5NRzHwG19aHmNJnj1Q8hpA/nBWZtZD4r4AX6YOt5ynLN2g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
