--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -13,3 +13,8 @@ body {
   width: 100%; */
   overflow-x: hidden;
 }
+
+.img-berita{
+  filter: brightness(0.5);
+  -webkit-filter: brightness(0.5);
+}
