--- a/resources/views/components/navbar/navbar_head.edge
+++ b/resources/views/components/navbar/navbar_head.edge
@@ -1,10 +1,18 @@
-<nav
-    class="bg-white border-gray-200 dark:bg-gray-900 fixed top-0 left-0 w-screen z-20 xl:inline lg:inline hidden shadow-lg">
-    <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-        <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
-            <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo" />
-            <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
-        </a>
+<nav class="lg:inline hidden bg-white border-gray-200 top-0 left-0 w-screen dark:bg-gray-900 fixed z-50 shadow">
+    <div class="flex justify-center py-4 px-[1cm]">
+        <div class="flex items-center">
+            <img src="/resources/images/logo_curug_bitung.png" class="me-6 w-auto h-[67px]" alt="Logo Curug Bitung">
+            <img src="/resources/images/logo_banten.png" class="me-6 w-auto h-[67px]" alt="Logo Banten">
+            <img src="/resources/images/logo_kemenkes.png" class="me-6 w-auto h-[60px]" alt="Logo Kemenkes">
+        </div>
+
+        <div class="grid grid-rows-2 grid-flow-col items-end">
+            <p class="ms-auto">Panduan Pasien & Pengunjung</p>
+            <div class=" bg-slate-900 rounded w-[72vw] h-[2px]">
+            </div>
+        </div>
+    </div>
+    <div class="w-screen flex flex-wrap items-center justify-between mx-auto px-[1cm] bg-cyan-100">
         <button data-collapse-toggle="navbar-default" type="button"
             class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
             aria-controls="navbar-default" aria-expanded="false">
@@ -16,22 +24,22 @@
         </button>
         <div class="hidden w-full md:block md:w-auto" id="navbar-default">
             <ul
-                class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
-                <li>
+                class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg  md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+                <li class="py-2 px-2 {{ (titleNav == 'beranda' ) ? ' bg-cyan-200' : ' ' }} text-gray-900">
                     <a href={{ route('puskes.home') }}
-                        class="block py-2 px-3 {{ (titleNav == 'beranda' ) ? 'text-blue-700' : 'text-gray-900 ' }} bg-blue-700 rounded md:bg-transparent md:p-0 dark:text-white md:dark:text-blue-500">Beranda</a>
+                        class="block py-2 px-3  bg-blue-700 rounded md:bg-transparent md:p-0 dark:text-white md:dark:text-blue-500">Beranda</a>
                 </li>
-                <li>
+                <li class="py-2 px-2 {{ (titleNav == 'profil' ) ? 'bg-cyan-200' : ' ' }} text-gray-900">
                     <a href={{ route('puskes.profil') }}
-                        class="block py-2 px-3 {{ (titleNav == 'profil' ) ? 'text-blue-700' : 'text-gray-900 ' }} rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Profil</a>
+                        class="block py-2 px-3  rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Profil</a>
                 </li>
-                <li>
+                <li class="py-2 px-2 {{ (titleNav == 'blog' ) ? 'bg-cyan-200' : ' ' }} text-gray-900">
                     <a href={{ route('puskes.blog') }}
-                        class="block py-2 px-3 {{ (titleNav == 'blog' ) ? 'text-blue-700' : 'text-gray-900 ' }} rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Blog</a>
+                        class="block py-2 px-3  rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Blog</a>
                 </li>
-                <li>
+                <li class="py-2 px-2 {{ (titleNav == 'contact' ) ? 'bg-cyan-200' : ' ' }} text-gray-900">
                     <a href={{ route('puskes.contact') }}
-                        class="block py-2 px-3 {{ (titleNav == 'contact' ) ? 'text-blue-700' : 'text-gray-900 ' }} rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Kontak</a>
+                        class="block py-2 px-3  rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Kontak</a>
                 </li>
             </ul>
         </div>
