--- a/resources/views/partials/footer.edge
+++ b/resources/views/partials/footer.edge
@@ -2,14 +2,13 @@
 <footer class=" bg-cyan-100 dark:bg-gray-900">
     <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
         <div class="md:flex md:justify-center">
-            <div class="mb-6 md:mb-0  md:me-12">
-                <div class=" text-left">
-                    <h2 class="mb-1 leading-none text-xl font-semibold dark:text-white">Puskesmas Curugbitung</h2>
-                    <p class="pb-5">Kami Siap Melayani Dengan <br> Hati, Ramah, dan Profesional</p>
+            <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-4">
+                <div>
+                    <h2 class="mb-1 text-xl font-semibold text-gray-900 uppercase dark:text-white">Puskesmas Curugbitung
+                    </h2>
+                    <p class="pb-5">Kami Siap Melayani Dengan Hati, Ramah, dan Profesional</p>
                     <img src="/resources/images/logo_curug_bitung.png" class=" h-28 me-3" alt="Logo Puskes" />
                 </div>
-            </div>
-            <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
                 <div>
                     <h2 class="mb-1 text-xl font-semibold text-gray-900 uppercase dark:text-white">FAQ</h2>
                     <ul class="text-gray-500 dark:text-gray-400 font-medium">
@@ -20,12 +19,14 @@
                 </div>
                 <div>
                     <h2 class="mb-1 text-xl font-semibold text-gray-900 uppercase dark:text-white">Hubungi Kami</h2>
-                    <p>Jalan Raya Maja-Kaleang <br> Curugbitung, Lebak 42382,<br> Kabupaten Lebak, Banten</p>
+                    <p>Jalan Raya Maja-Kaleang Curugbitung, Lebak 42382,Kabupaten Lebak, Banten</p>
                 </div>
                 <div>
                     <h2 class="mb-1 text-xl font-semibold text-gray-900 uppercase dark:text-white">Tentang Kami</h2>
-                   <p class="mb-3">Saat ini UPTD Puskesmas Rawat Inap <br> Curugbitung dikepalai oleh H. Ribun. <br> Beliau menjabat sejak tahun 2014 <br> sampai dengan saat ini.</p>
-            <p class="mb-3">Dibawah kepemimpinan beliau, kami <br> yakin mampu memberikan pelayanan <br> kesahatan yang optimal kepada <br> masyarakat Curugbitung</p>
+                    <p class="mb-3">Saat ini UPTD Puskesmas Rawat Inap Curugbitung dikepalai oleh H. Ribun. Beliau
+                        menjabat sejak tahun 2014 sampai dengan saat ini.</p>
+                    <p class="mb-3">Dibawah kepemimpinan beliau, kami yakin mampu memberikan pelayanan kesahatan yang
+                        optimal kepada masyarakat Curugbitung</p>
                 </div>
             </div>
         </div>
