--- a/resources/views/components/card/card.edge
+++ b/resources/views/components/card/card.edge
@@ -1,5 +1,5 @@
 <a href="#"
-    class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
+    class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow-[8px_8px_10px_-10px_rgba(0,0,0,0.3)] md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
     <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg"
         src="/resources/images/img_asuh_anak.png" alt="">
     <div class="flex flex-col justify-between p-4 leading-normal">
